# pkg/server/endpoints.go
@@ -216,6 +216,7 @@ func newGinEngine(opts Options) (*gin.Engine, error) {
 		r.POST("/api/pipeline/labels/search", SearchLabels)
 		r.POST("/api/pipeline/reports/search", SearchPipelineReports)
 		r.POST("/api/pipeline/reports/summary", SearchPipelineReportsSummary)
+		r.POST("/api/pipeline/actions/search", SearchOpenActions)
 		r.POST("/api/pipeline/scms/search", SearchSCMs)
 	} else {
 		apiPipeline.POST("/config/sources/search", SearchConfigSources)
@@ -224,6 +225,7 @@ func newGinEngine(opts Options) (*gin.Engine, error) {
 		apiPipeline.POST("/labels/search", SearchLabels)
 		apiPipeline.POST("/reports/search", SearchPipelineReports)
 		apiPipeline.POST("/reports/summary", SearchPipelineReportsSummary)
+		apiPipeline.POST("/actions/search", SearchOpenActions)
 		apiPipeline.POST("/scms/search", SearchSCMs)
 	}
 
